@@ -1,3 +1,8 @@
+2008-05-19 Adam Moody <moody20@llnl.gov>
+
+	* src/pmgr_collective_client.c : Use rand_r() instead of srand() to avoid
+	  overwriting random seed a user may have specified (from OSU).
+
 2008-05-18 Adam Moody <moody20@llnl.gov>
 
 	* src/pmgr_collective_client.c : Added IP:port info to error message
